# DeepFold

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  predict.py  pyproject.toml  relax.py  requirements.txt  setup.py
deepfold/: cli.py  config.py  loss.py  monomer_builder.py  multimer_builder.py  package_info.py  predict.py  tune.py
deepfold/common/: protein.py  residue_constants.py
deepfold/data/multimer/: input_features.py  msa_pairing.py
deepfold/data/process/: monomer.py  multimer.py  pipeline.py  transforms.py  transforms_multimer.py
deepfold/data/search/: input_features.py
deepfold/distributed/: _dist.py
deepfold/eval/: distogram.py  msa.py  plot.py  pseudo_3d.py  utils.py
deepfold/model/alphafold/: loss.py
deepfold/modules/: alphafold.py  attention.py  auxiliary_heads.py  extra_msa_block.py  invariant_point_attention.py  msa_column_attention.py  msa_row_attention_with_pair_bias.py  outer_product_mean.py  triangular_attention.py  triangular_multiplicative_update.py
deepfold/ops/: alter_mha.py  autotune.py  evoformer_attention.py  precision.py  triton_mha.py  triton_utils.py  utils.py
deepfold/ops/cc/: evoformer_attn.py
deepfold/predict/: __init__.py  __main__.py  cli.py  hooks.py  predictor.py  presets.py
deepfold/relax/: __init__.py  __main__.py  amber_minimize.py  relax.py
deepfold/runner/: parser.py
deepfold/utils/: func_utils.py  import_utils.py  torch_utils.py
docs/: build.md  inference.md  keys.md
examples/: recipes.json
scripts/: create_multimer_features.py  gener_combi_casp16.py  gener_multimer.py
tests/: test_triton_mha.py  test_triton_tri_attn.py  utils.py
