[project]
name = "deepfold"
version = "1.0.4"
description = "DeepFold"
authors = [{ name = "Minsoo Kim", email = "vv137.xyz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools (>=75.8.0,<76.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "jaxtyping (>=0.3.1,<0.4.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "biopython (==1.83)",
    "biotite (>=1.2.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "pdbfixer @ git+https://github.com/openmm/pdbfixer.git@v1.11",
    "openmm-cuda-12 (>=8.2.0,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mashumaro (>=3.16,<4.0)",
    "beartype (>=0.20.2,<0.21.0)",
    "einops (>=0.8.1,<0.9.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
]

[project.urls]
Homepage = "https://deepfold.org"
Repository = "https://github.com/DeepFoldProtein/DeepFold"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ["pre-commit"]
lint = ["black[jupyter]", "isort"]

[project.scripts]
deepfold-monomer = "deepfold.monomer_builder:cli"
deepfold-multimer = "deepfold.multimer_builder:cli"
deepfold-predict = "deepfold.predict:main"
deepfold-relax = "deepfold.relax:main"
deepfold-tune = "deepfold.tune:main"

[tool.black]
line-length = 150
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = "(csrc/*|.poetry/*|.venv/*)"

[tool.isort]
profile = "black"
line_length = 150
py_version = 311
skip_glob = ["_runs/*", "csrc/*", ".poetry/*", ".venv/*"]
